--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8181
-spring.datasource.url=jdbc:mysql://localhost:3306/prueba
+spring.datasource.url=jdbc:mysql://localhost:3308/prueba
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=root
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
